Mostly work on the exploratory analyses

--- a/Leader2.bib
+++ b/Leader2.bib
@@ -10321,3 +10321,23 @@ doi = {10.1177/0956797618808470}
   year={1995},
   publisher={Wiley Online Library}
 }
+@article{lee1999,
+  title={Learning the parts of objects by non-negative matrix factorization},
+  author={Lee, Daniel D and Seung, H Sebastian},
+  journal={Nature},
+  volume={401},
+  number={6755},
+  pages={788--791},
+  year={1999},
+  publisher={Nature Publishing Group}
+}
+@article{gaujoux2010,
+  title={A flexible R package for nonnegative matrix factorization},
+  author={Gaujoux, Renaud and Seoighe, Cathal},
+  journal={BMC Bioinformatics},
+  volume={11},
+  number={1},
+  pages={367},
+  year={2010},
+  publisher={Springer}
+}
