--- a/leadership_across_cultures_contexts.Rmd
+++ b/leadership_across_cultures_contexts.Rmd
@@ -164,7 +164,7 @@ This text record was coded has having evidence for the functions *Resolve confli
 
 We analyzed data from our researcher-coded operationalized variables at the text-record level and at the culture-level. Our first goal was to assess the proportion of text records and cultures that provided evidence for each of our coded variables to discover the qualities, functions, benefits and costs of leadership that are most and least frequently noted in the ethnographic record. We computed confidence intervals for the proportion of text records supporting each variable using generalized linear mixed effects models and random intercepts based on document authors nested within cultures (which partially accounts for potential variation due to differences in ethnographers such as gender, nationality, or theoretical framework). We computed confidence intervals for the proportion of cultures with evidence for each variable using a cluster bootstrap.
 
-We then explored "features" in our data. There are numerous approaches to detecting features in matrix data such as ours, many of which employ various dimensionality reduction and clustering techniques. We used hierarchical cluster analysis on our quality and function variables. We computed distance between our binary vectors using $1-cor(x, y)$ (so that the distance between highly correlated variables is close to $0$, the distance between uncorrelated variables is close to $1$, and the distance between negatively correlated variables is close to $2$), and agglomerated using the Ward algorithm. We assessed the robustness of the clusters using the *pvclust* package [@suzuki_pvclust2006], which computes an unbiased probability that a cluster appears in bootstrapped samples. We used 10,000 bootstrapped samples.
+We then explored "features" in our data. There are numerous approaches to detecting features in matrix data such as ours, many of which employ various dimensionality reduction and clustering techniques. We used several methods to explore lower dimensional representations of these data that might reveal informative structure, including logistic PCA, non-negative matrix factorization (NMF), and agglomerative hierarchical cluster analysis. Logistic PCA generalizes Pearson's original formulation of PCA to find a projection of the natural parameters of the saturated model that minimizes the Bernoulli deviance [@logisticPCA]. NMF [@lee1999] finds a low rank approximation of the original matrix, $X \approx WH$, where $X$ is an $n \times p$ matrix, and $W$ and $H$ are $n \times k$ and $k \times p$ matrices, respectively; all elements of $X$, $W$ and $H$ are $\geq 0$; and, typically, $k << min(n,p)$. NMF estimates $W$ and $H$ by minimizing a measure of distance (typically the Frobenius norm or the Kullback-Leibler divergence) between $X$ and $WH$ [@gaujoux2010]. Agglomerative hierarchical cluster starts with all elements in their own cluster, and then uses a distance metric to combine the two closest clusters into a single cluster; the next two closest clusters are then combined, and so forth, until all elements belong to a single cluster. We computed distance between our binary vectors using $1-cor(x, y)$ (so that the distance between highly correlated variables is close to $0$, the distance between uncorrelated variables is close to $1$, and the distance between negatively correlated variables is close to $2$), and agglomerated using the Ward algorithm. We assessed the robustness of the clusters using the *pvclust* package [@suzuki_pvclust2006], which computes an unbiased probability that a cluster appears in bootstrapped samples. We used 10,000 bootstrapped samples.
 
 <!-- To reduce the dimensionality of the `r length(quality_vars)` leader quality variables and the `r length(function_vars)` leader function variables, all of which take binary values (0, 1), we used logistic PCA from the logisticPCA package. This algorithm projects the natural parameters of the saturated model onto the lower $k-$dimension space that minimizes the Bernoulli deviance [@logisticPCA]. Prior to analysis we removed all rows that had no evidence for any variable, which resulted in `r nrow(pca_data_qualities)` text records for the leader quality variables and `r nrow(pca_data_functions)` text records for the leader function variables. We used cross-validation to optimize rank, $k$, and a tuning parameter, $m$ (the value to approximate the saturated model), per recommendation of the package authors. -->
 
@@ -218,8 +218,6 @@ p_map
 
 ## Distribution of text records by mode of subsistence and group type
 
-
-
 The type of group to which a leader text referred was coded into seven researcher-coded categories: residential groups, kin groups, economic groups, political groups at the community level, political group beyond the community level, military groups, and religious groups. Figure \@ref(fig:grouptype) indicates the proportion of text records that were categorized into each of these groups, broken out by mode of subsistence. We rely on a modified classification of subsistence from the HRAF, collapsing “hunter-gatherers” and “primarily hunter-gatherers” into a single category, “hunter-gatherers,” and by collapsing “agro-pastoralists” and “pastoralists” into a single “pastoralists” category. We renamed the HRAF’s “Other” subsistence category, which is applied to societies with various combinations of hunting, fishing, gathering, pastoralism, and horticulture or intensive agriculture, as “mixed.” This produced a subsistence classification with five groups: Hunter-gatherers, Pastoralists, Horticulturalists, Agriculturalists, and Mixed.
 
 ```{r grouptype, fig.width=20, fig.height=10, fig.cap="The distribution of text records by subsistence and group type. Areas of the bars are proportional to the number of text records in that category."}
@@ -259,11 +257,29 @@ plot.variable.support
 
 The most common *functions* leaders serve, which are documented in over 70% of cultures, are resolving conflicts, providing various social functions, organizing various cooperative activities, and providing counsel or direction in follower's affairs. Leaders also commonly serve as a representatives in inter-group interactions, manage the distribution of resources, and provide context-specific leadership such as military command and in providing ritual services. In about half of the cultures sampled here leaders punish other group members and manage economic systems. Notable infrequent functions include controlling group movement and migrations.
 
-The most common *qualities* of leaders are being of high social status (documented in over 90% of cultures), being experienced or accomplished, and being described as knowledgeable or intelligent (documented in approximately 80% of cultures). Also, in about 60% of the cultures sampled here leaders were wealthy, nepotistic, possessed supernatural qualities, were generous, or maintained strong authority over followers. Notable infrequent qualities of leaders in these data include physical formidability and high social contacts (documented in about 35% of cultures) and charisma and fairness (documented in about 20% of cultures). 
+The most common *qualities* of leaders are being of high social status (documented in over 90% of cultures), being experienced or accomplished, and being described as knowledgeable or intelligent (documented in approximately 80% of cultures). Also, in about 60% of the cultures sampled here leaders were wealthy, nepotistic, possessed supernatural qualities, were generous, or maintained strong authority over followers. Notable infrequent qualities of leaders in these data include physical formidability and high social contacts (documented in about 35% of cultures) and charisma and fairness (documented in about 20% of cultures).
 
-## Cluster analyses
+## When do leaders also have high status?
 
-Figure \@ref(fig:cluster)A displays a dendrogram from the cluster analysis of the `r length(quality_vars)` leader quality variables and Figure \@ref(fig:cluster)B displays a dendrogram from the cluster analysis of the `r length(function_vars)` leader function variables. Each cluster analysis includes two estimates of significance for how strongly each cluster within the dendrogram is supported by the data. We rely on the AU (Approximately Unbiased) *p* values, which are computed by multiscale bootstrap resampling and represented as percentages (e.g., clusters with AU values $>95$ are strongly supported, and the top-level clusters are automatically highlighted by rectangles).
+```{r highstatuscalc}
+statusFracTxt <- d_melt$value[d_melt$Variable == 'High status' & d_melt$Type == 'Extracts']
+statusPercTxt <- signif(100*statusFracTxt, 3)
+
+statusFracCult <- d_melt$value[d_melt$Variable == 'High status' & d_melt$Type == 'Cultures']
+statusPercCult <- signif(100*statusFracCult, 3)
+
+```
+
+*High status* was the most frequent leader quality in the ethnographic record, with `r statusPercTxt`% of text records and `r statusPercCult`% cultures containing evidence that leaders were of high social status. To explore factors that distinguished these records from those with no evidence for status, we first created a document-term matrix (DTM) of all "informative" words in our corpus of texts and the frequency with which they occured in each text record (see SI for details). We then fit an elasticnet logistic regression model (with lasso penalty) of high status (0/1) as a function of the frequencies of all `r ncol(leader_dtm)-1` words. Words that were strong positive predictors epitomized the semantic content of the text records which provide evidence of high status as a quality of leaders. These included *`r rev(highstatus_plot$data$Word)[1:4]`*, and *`r rev(highstatus_plot$data$Word)[5]`*. See Figure \@ref(fig:highstatusplot).
+
+
+
+## Dimension reduction
+
+Our qualities and functions data comprised sparse $`r nrow(leader_text)` \times `r length(quality_vars)`$ and $`r nrow(leader_text)` \times `r length(function_vars)`$ matrices of binary data, respectively. 
+
+
+Most data reduction methods did not find strong evidence of structure in the data. Here we report the cluster analysis of variables that used the correlation distance metric ($1 - cor$), and the Ward agglomeration algorithm (for results from the other methods, see the SI). Figure \@ref(fig:cluster)A displays a dendrogram from the cluster analysis of the `r length(quality_vars)` leader quality variables and Figure \@ref(fig:cluster)B displays a dendrogram from the cluster analysis of the `r length(function_vars)` leader function variables. Each cluster analysis includes two estimates of significance for how strongly each cluster within the dendrogram is supported by the data. We rely on the AU (Approximately Unbiased) *p* values, which are computed by multiscale bootstrap resampling and represented as percentages (e.g., clusters with AU values $>95$ are strongly supported, and the top-level clusters are automatically highlighted by rectangles).
 
 ```{r cluster, fig.cap="Cluster analysis of leader quality variables (A) and leader function variables (B). Distances were $1 - cor$. Ward agglomeration method. AU p-values (red) computed with 10,000 bootstrap samples using the pvclust package [@pvclust2015]."}
 # plot(m_pvclust_qual)
@@ -321,30 +337,6 @@ plot.variable.support_costs_benefits
 <!-- ```{r qualPCmodel2, fig.height=10, fig.width=20} -->
 <!-- m_qPC2_sub_plot + m_qPC2_group_plot -->
 <!-- ``` -->
-
-## Disentangleing the relationship between leadership and high status
-
-Figure \@ref(fig:varsupport) identified *high status* as the most frequent leader quality in the ethnographic record, documented in over 30% of text records and in over 90% of cultures. This result is neither surprising nor particularly informative. However, these data present an oppurtunity to explore the relationship between high status and leadership, as represented in ethnographic texts. To do so, we draw on the term-document matrix of our ethnographic sample which was developed by computing the frequencies of all “informative” words in each text record after removing all punctuation and English stop words (uninformative words such as the, is, at), stemming the remaining words (reducing inflections such as plurals and past tenses to the root, or stem, words). In this data matrix the columns are all the unique word stems (terms), rows were the text records (documents), and the values in each cell were the frequencies of each word stem in each text record. The coding of *high status* was joined with this term-document matrix. This process produced a matrix with `r dim(dtm)[1]` rows with one for each text-record and `r dim(dtm)[2]` columns with a column for each unique term and a column for the researcher-coded *high status* value ($0$ or $1$). 
-
-We used lasso regression as a variable selection technique, which is especially useful when the number of predictors is much greater than the number of cases (i.e., $p > > n$). Lasso regression has a penalty or shrinkage term, $\lambda$: larger values of $\lambda$ retain more variables in the model, at the risk of over-fitting, whereas smaller values of $\lambda$ decrease the number of predictors retained in the model, at the risk of under-fitting. The optimal value of $\lambda$ can be estimated with cross-validation [@tibshirani_regression_1996; @zou_regularization_2005]. We used the glmnet package [@friedman_regularization_2010] to fit a lasso regression model to determine which words best predicted evidence for high status as a leader quality. Because this outomce is counts of text recrods, we used Poisson errors. We used tenfold cross-validation to choose the $\lambda$ parameter that minimized deviance. We then plotted all the non-zero coefficients (Figure \@ref(fig:status-text). The most predictive words then epitomize the semantic content of the text records which provide evidence of high status as a quality of leaders.
-
-```{r status-text, echo=F, message=F, fig.width=8, fig.height=6, fig.align='center', fig.cap="Lasso Poisson regression coefficients, which indicate the words whose frequencies in each text record best predicted evidence for the *high status* leader quality in each text record. Coefficients estimated with glmnet package using cross-validation to determine the optimal value of lambda [@friedman_regularization_2010]. Blue values are positive predictors; red values are negative predictors."}
-highstatus_plot
-```
-
-Figure \@ref(fig:status-text) depicts the `r length(highstatus_plot$data$Word)` words with non-zero (mostly positive) coefficents. The words most predictive of evidence for high status leaders are *`r rev(highstatus_plot$data$Word)[1:3]`*, and *`r rev(highstatus_plot$data$Word)[4]`*, respectively. The words, *`r rev(highstatus_plot$data$Word)[5:7]`* are moderately strong predictors and notable words with low predictive value (including positive and negative predictors) include *authority*, *influence*, *king*, *chief*, and *headman*. The word *follow* is the strongest negative predictor and *company* and *economic* are marginal negative predictors. 
-
-## Effects of document meta-data on leadership patterns
-
-```{r tabauthorgender}
-unique_authors <- unique(authorship[c('author_ID', 'author_gender')])
-tab_author_gender <- table(unique_authors$author_gender)
-mm_coauthorSUM <- summary(mm_coauthor)
-mm_coauthorP <- mm_coauthorSUM$coefficients['female_coauthorTRUE', 'Pr(>|z|)']
-```
-
-We explored whether document features, such as date of publication and gender of authors, influenced reporting of leader functions and qualities. There were `r tab_author_gender['male']` male authors, `r tab_author_gender['female']` females authors, and `r tab_author_gender['unkown']` authors whose gender we could not determine; some of these authors were co-authors. We then tested if text records with a female author or co-author were more likely to discuss female leaders. Of the `r sum(tab_coauthor['FALSE',])` text records with no female co-author, `r tab_coauthor['FALSE','yes']` (`r 100*signif(tab_coauthor['FALSE','yes']/sum(tab_coauthor['FALSE',]),2)`%) reported female leadership. Of the `r sum(tab_coauthor['TRUE',])` text records with a female co-author, on the other hand, `r tab_coauthor['TRUE','yes']` (`r 100*signif(tab_coauthor['TRUE','yes']/sum(tab_coauthor['TRUE',]),2)`%) reported female leadership, suggesting that female ethnographers were more likely to report female leaders. However, after accounting for the non-independence of text records (i.e., multiple records from the same document) using a logistic mixed effects regression model, we found that although there was a positive effect of co-author gender on reporting female leadership (OR = `r signif(mm_coauthorOR, 2)`), it was not statistically significant (p = `r signif(mm_coauthorP, 2)`). 
-
 
 # Discussion
 
@@ -453,6 +445,18 @@ We explored three possible sources of bias in discovery of evidence for each of 
 ```{r pubdate, fig.cap="The effect of publication date on the probability of finding evidence for leader qualities, functions, benefits, and costs. Multivariate values are  controlling for female authorship and number of pages of ethonography for each culture. All models had random intercepts for ethnographers nested within cultures. Models were fit for each of the 105 variables as outcomes, and after adjusing p-values for a false discovery rate of 5%, the effect of publication date on these outcome variables remained significant. Publication date was centered and standardized by 1 SD. Each dot is one coefficient (converted from log odds to odds ratios). Bars are 95% CI."}
 plot_pubdate
 ```
+
+## Disentangleing the relationship between leadership and high status
+
+These data present an oppurtunity to explore the relationship between high status and leadership, as represented in ethnographic texts. To do so, we draw on the term-document matrix of our ethnographic sample which was developed by computing the frequencies of all "informative" words in each text record after removing all punctuation and English stop words (uninformative words such as the, is, at), stemming the remaining words (reducing inflections such as plurals and past tenses to the root, or stem, words). In this data matrix the columns are all the unique word stems (terms), rows were the text records (documents), and the values in each cell were the frequencies of each word stem in each text record. The coding of *high status* was joined with this term-document matrix. This process produced a matrix with `r nrow(leader_dtm)` rows with one for each text-record and `r ncol(leader_dtm)` columns with a column for each unique term and a column for the researcher-coded *high status* value ($0$ or $1$). 
+
+We used lasso regression as a variable selection technique, which is especially useful when the number of predictors is much greater than the number of cases (i.e., $p > > n$). Lasso regression has a penalty or shrinkage term, $\lambda$: larger values of $\lambda$ retain more variables in the model, at the risk of over-fitting, whereas smaller values of $\lambda$ decrease the number of predictors retained in the model, at the risk of under-fitting. The optimal value of $\lambda$ can be estimated with cross-validation [@tibshirani_regression_1996; @zou_regularization_2005]. We used the glmnet package [@friedman_regularization_2010] to fit a lasso regression model to determine which words best predicted evidence for high status as a leader quality. We used tenfold cross-validation to choose the $\lambda$ parameter that minimized deviance. We then plotted all the non-zero coefficients (Figure \@ref(fig:highstatusplot). 
+
+```{r highstatusplot, echo=F, message=F, fig.width=8, fig.height=6, fig.align='center', fig.cap="Lasso logistic regression coefficients, which indicate the words whose frequencies in each text record best predicted evidence for the *high status* leader quality in each text record. Coefficients estimated with glmnet package using cross-validation to determine the optimal value of lambda [@friedman_regularization_2010]. Blue values are positive predictors; red values are negative predictors. X-axis is on a log 10 scale."}
+highstatus_plot + scale_x_log10()
+```
+
+Figure \@ref(fig:highstatusplot) depicts the `r length(highstatus_plot$data$Word)` words with non-zero (mostly positive) coefficents. The words most predictive of evidence for high status leaders are *`r rev(highstatus_plot$data$Word)[1:3]`*, and *`r rev(highstatus_plot$data$Word)[4]`*, respectively. The words, *`r rev(highstatus_plot$data$Word)[5:7]`* are moderately strong predictors. 
 
 ## Feature models
 
