--- a/leadership_across_cultures_contexts.Rmd
+++ b/leadership_across_cultures_contexts.Rmd
@@ -164,7 +164,7 @@ This text record was coded has having evidence for the functions *Resolve confli
 
 We analyzed data from our researcher-coded operationalized variables at the text-record level and at the culture-level. Our first goal was to assess the proportion of text records and cultures that provided evidence for each of our coded variables to discover the qualities, functions, benefits and costs of leadership that are most and least frequently noted in the ethnographic record. We computed confidence intervals for the proportion of text records supporting each variable using generalized linear mixed effects models and random intercepts based on document authors nested within cultures (which partially accounts for potential variation due to differences in ethnographers such as gender, nationality, or theoretical framework). We computed confidence intervals for the proportion of cultures with evidence for each variable using a cluster bootstrap.
 
-We then explored "features" in our data. There are numerous approaches to detecting features in matrix data such as ours, many of which employ various dimensionality reduction and clustering techniques. We used several methods to explore lower dimensional representations of these data that might reveal informative structure, including logistic PCA, non-negative matrix factorization (NMF), and agglomerative hierarchical cluster analysis. Logistic PCA generalizes Pearson's original formulation of PCA to find a projection of the natural parameters of the saturated model that minimizes the Bernoulli deviance [@logisticPCA]. NMF [@lee1999] finds a low rank approximation of the original matrix, $X \approx WH$, where $X$ is an $n \times p$ matrix, and $W$ and $H$ are $n \times k$ and $k \times p$ matrices, respectively; all elements of $X$, $W$ and $H$ are $\geq 0$; and, typically, $k << min(n,p)$. NMF estimates $W$ and $H$ by minimizing a measure of distance (typically the Frobenius norm or the Kullback-Leibler divergence) between $X$ and $WH$ [@gaujoux2010]. Agglomerative hierarchical cluster starts with all elements in their own cluster, and then uses a distance metric to combine the two closest clusters into a single cluster; the next two closest clusters are then combined, and so forth, until all elements belong to a single cluster. We computed distance between our binary vectors using $1-cor(x, y)$ (so that the distance between highly correlated variables is close to $0$, the distance between uncorrelated variables is close to $1$, and the distance between negatively correlated variables is close to $2$), and agglomerated using the Ward algorithm. We assessed the robustness of the clusters using the *pvclust* package [@suzuki_pvclust2006], which computes an unbiased probability that a cluster appears in bootstrapped samples. We used 10,000 bootstrapped samples.
+We then used several methods to explore lower dimensional representations of these data that might reveal informative "features." These included logistic PCA, non-negative matrix factorization (NMF), and hierarchical cluster analysis. Logistic PCA generalizes Pearson's original formulation of PCA to find a projection of the natural parameters of the saturated model that minimizes the Bernoulli deviance [@logisticPCA]. NMF [@lee1999] finds a low rank approximation of the original matrix, $X \approx WH$, where $X$ is an $n \times p$ matrix, and $W$ and $H$ are $n \times k$ and $k \times p$ matrices, respectively; all elements of $X$, $W$ and $H$ are $\geq 0$; and, typically, $k << min(n,p)$. NMF estimates $W$ and $H$ by minimizing a measure of distance (typically the Frobenius norm or the Kullback-Leibler divergence) between $X$ and $WH$ [@gaujoux2010]. Agglomerative hierarchical cluster starts with all elements in their own cluster, and then uses a distance metric to combine the two closest clusters into a single cluster; the next two closest clusters are then combined, and so forth, until all elements belong to a single cluster. We computed distance between our binary vectors using $1-cor(x, y)$, and agglomerated using the Ward algorithm. We assessed the robustness of the clusters using the *pvclust* package [@suzuki_pvclust2006], which computes an unbiased probability that a cluster appears in bootstrapped samples. We used 10,000 bootstrapped samples.
 
 <!-- To reduce the dimensionality of the `r length(quality_vars)` leader quality variables and the `r length(function_vars)` leader function variables, all of which take binary values (0, 1), we used logistic PCA from the logisticPCA package. This algorithm projects the natural parameters of the saturated model onto the lower $k-$dimension space that minimizes the Bernoulli deviance [@logisticPCA]. Prior to analysis we removed all rows that had no evidence for any variable, which resulted in `r nrow(pca_data_qualities)` text records for the leader quality variables and `r nrow(pca_data_functions)` text records for the leader function variables. We used cross-validation to optimize rank, $k$, and a tuning parameter, $m$ (the value to approximate the saturated model), per recommendation of the package authors. -->
 
@@ -178,7 +178,7 @@ To suppliment results from the aformentioend methods, we also performed textual 
 
 <!-- Our fourth goal was to explore associations between the principle components of leader qualities and functions, and culture-level variables such as mode of subsistence, social complexity, population density, and group size, and effects of group type, such as political groups versus kin groups. We used linear mixed effects models from the lme4 package [@bates2015], with PC1 and PC2 as outcome variables, culture-level variables as predictors, and documents nested within cultures as grouping variables for random intercepts. -->
 
-All analyses were conducted with `r R.version.string`.
+The analyses computing levels of evidence for each variable used the entire set of text records. Analyses investigating lower dimensional representations used a slightly smaller set that omitted records with no evidence for any variable (i.e., all zeros). All analyses were conducted with `r R.version.string`.
 
 # Results
 
@@ -225,7 +225,7 @@ ggsave(file="Figures/group_subsis.pdf", plot_group_subsis, width=16, height=6)
 plot_group_subsis #+ plot_group_sex
 ```
 
-The vast majority of text records pertained to male leadership (`r male_leader_pct`%) and very few pertained to female leadership (`r female_leader_pct`%), with some records not sex-specific. There were female leaders in almost all types of groups, however, except military and religious. Female leaders did tend to lead at the kin group and other residential subgroups, though: `r female_residential_pct`% of female leaders led at the residential subgroup level, for instance, compared to `r male_residential_pct`% of male leaders.
+The vast majority of text records pertained to male leadership (`r male_leader_pct`%) and very few pertained to female leadership (`r female_leader_pct`%), with the remaining records not sex-specific. There were female leaders in almost all types of groups, however, except military and religious. Female leaders did tend to lead at the kin group and other residential subgroups, though: `r female_residential_pct`% of female leaders led at the residential subgroup level, for instance, compared to `r male_residential_pct`% of male leaders.
 
 As Figure \@ref(fig:grouptype) reveals, the distribution of text records by group type varies across subsistence type. Across all subsistence types, the most frequent group type is political groups at the community level, with the exception of agriculturalitsts in which supracommunity political groups are the most frequent group type. Leadership beyond the community level is relatively rare outside of agricultural populations and is especially rare among hunter-gatherers. Leadership within residential groups is most frequently associated with hunter-gatherers (`r hg_residential_pct`% of the total sample of hunter-gatherer text records) and leadership within kin groups is most frequently associated with hunter-gatherers (`r hg_kin_pct`% of the total hunter-gatherers sample) and horticulturalists (`r hort_kin_pct`% of the total horticulturalists sample). 
 
@@ -246,7 +246,7 @@ We fit `r length(all_study_vars)` logistic mixed effects models with each binary
 
 We then tested if text records with a female author or co-author were more likely to discuss female leaders. Of the `r sum(tab_coauthor['FALSE',])` text records with no female author or co-author, `r tab_coauthor['FALSE','yes']` (`r 100*signif(tab_coauthor['FALSE','yes']/sum(tab_coauthor['FALSE',]),2)`%) reported female leadership. Of the `r sum(tab_coauthor['TRUE',])` text records with a female author or co-author, `r tab_coauthor['TRUE','yes']` (`r 100*signif(tab_coauthor['TRUE','yes']/sum(tab_coauthor['TRUE',]),2)`%) reported female leadership, suggesting that female ethnographers were more likely to report female leaders. After accounting for the non-independence of text records (i.e., multiple records from the same document) using a logistic mixed effects regression model, however, we found that although there was a positive effect of co-author gender on reporting female leadership (OR = `r signif(mm_coauthorOR, 2)`), it was not statistically significant (p = `r signif(mm_coauthorP, 2)`).
 
-## Variable distributions
+## Evidence for leader functions and qualities
 
 For each of the `r length(c(quality_vars, function_vars, leader_cost_vars, leader_benefit_vars, follower_benefit_vars, follower_cost_vars))` coded variables (see Tables \@ref(tab:qualfuncvars) and \@ref(tab:costbenefitvars)), we computed the percentage of text records that provided support, and we computed the percentage of cultures with at least one text record providing support for that variable. See Figure \@ref(fig:varsupport).
 
